config-root/namespaces/jx-staging/springdemo/springdemo-springdemo-deploy.yaml
# Source: springdemo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springdemo-springdemo
  labels:
    draft: draft-app
    chart: "springdemo-0.0.4"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: springdemo-springdemo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: springdemo-springdemo
    spec:
      containers:
        - name: springdemo
          image: "gcr.io/jenkinsxio/springdemo:0.0.4"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
