config-root/namespaces/jx-staging/springdemo/springdemo-ingress.yaml
# Source: springdemo/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: springdemo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: springdemo
              servicePort: 80
      host: springdemo-jx-staging.34.121.39.44.nip.io
